--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <groupId>com.demo.station</groupId>
     <artifactId>DemoStation</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>DemoStation</name>
+    <packaging>jar</packaging>
 
     <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-parent -->
     <parent>
@@ -115,6 +117,10 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <includeSystemScope>true</includeSystemScope>
+                    <fork>true</fork>
+                </configuration>
             </plugin>
         </plugins>
     </build>
