--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
   datasource:
     # 注意：pom文件中，mysql版本为8以上时，驱动加 cj      url加上 时区serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://106.15.106.108:3306/demo_station?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://106.15.106.108:3306/demo_station?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=UTF-8
     username: root
     password: zsw0828zsw
 
