--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ server:
 
 
 spring:
+  # 将thymeleaf  关闭缓存
+  thymeleaf:
+    cache: false
+
   datasource:
     # 注意：pom文件中，mysql版本为8以上时，驱动加 cj      url加上 时区serverTimezone=GMT%2B8
     driver-class-name: com.mysql.cj.jdbc.Driver
