--- a/pom.xml
+++ b/pom.xml
@@ -162,6 +162,13 @@
             <version>1.0.6</version>
         </dependency>
 
+        <!--sftp文件上传-->
+        <dependency>
+            <groupId>com.jcraft</groupId>
+            <artifactId>jsch</artifactId>
+            <version>0.1.54</version>
+        </dependency>
+
 
 
     </dependencies>
